--- a/litmus/Makefile
+++ b/litmus/Makefile
@@ -11,6 +11,7 @@ obj-y     = sched_plugin.o litmus.o \
 	    sync.o \
 	    rt_domain.o \
 	    edf_common.o \
+	    mc2_common.o \
 	    fp_common.o \
 	    fdso.o \
 	    locking.o \
@@ -21,7 +22,8 @@ obj-y     = sched_plugin.o litmus.o \
 	    uncachedev.o \
 	    sched_gsn_edf.o \
 	    sched_psn_edf.o \
-	    sched_pfp.o
+	    sched_pfp.o \
+	    sched_mc2.o
 
 obj-$(CONFIG_PLUGIN_CEDF) += sched_cedf.o
 obj-$(CONFIG_PLUGIN_PFAIR) += sched_pfair.o
