--- a/litmus/reservations/Makefile
+++ b/litmus/reservations/Makefile
@@ -1,3 +1,4 @@
 obj-y += core.o budget-notifier.o alloc.o
 obj-y += polling.o
 obj-y += table-driven.o
+obj-y += ext_reservation.o gedf_reservation.o
